all functions are set up, updates can follow

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 
             <div class="flex">
                 <div>Income: <input type="text" name="" id="UserIncome" value="00000"></div>
-                <div>Expenses: <input type="text" name="" id="UserExpenses" value=""></div>
+                <div>Expenses: <input type="text" name="" id="UserExpenses" value="">
+                </div>
             </div>
         </div>
         <br/>
@@ -65,7 +66,9 @@
         <br/>
         <div class="patchSection">
             <h2 class="PatchTitle">Transaction History</h2>
-            <div class="list-container"></div>
+            <ul id="listContainer">
+
+            </ul>
         </div>
     </div>
 
